Use interface type instead of concrete implementation
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>